# ime-embarcados-lib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: Adsr.cpp  Adsr.h  CMakeLists.txt  Metro.cpp  Metro.h  Oscillator.cpp  Oscillator.h  Phasor.cpp  Phasor.h  config.h  defs.h  ime-embarcados-lib.cpp
