idf_component_register(
    SRCS "ime-embarcados-lib.cpp"
         "DaisySP/Source/Control/adenv.cpp"
         "DaisySP/Source/Control/adsr.cpp"
         "DaisySP/Source/Control/phasor.cpp"
         "DaisySP/Source/Drums/analogbassdrum.cpp"
         "DaisySP/Source/Drums/analogsnaredrum.cpp"
         "DaisySP/Source/Drums/hihat.cpp"
         "DaisySP/Source/Drums/synthbassdrum.cpp"
         "DaisySP/Source/Drums/synthsnaredrum.cpp"
         "DaisySP/Source/Dynamics/crossfade.cpp"
         "DaisySP/Source/Dynamics/limiter.cpp"
         "DaisySP/Source/Effects/autowah.cpp"
         "DaisySP/Source/Effects/chorus.cpp"
         "DaisySP/Source/Effects/decimator.cpp"
         "DaisySP/Source/Effects/flanger.cpp"
         "DaisySP/Source/Effects/overdrive.cpp"
         "DaisySP/Source/Effects/phaser.cpp"
         "DaisySP/Source/Effects/sampleratereducer.cpp"
         "DaisySP/Source/Effects/tremolo.cpp"
         "DaisySP/Source/Effects/wavefolder.cpp"
         "DaisySP/Source/Filters/ladder.cpp"
         "DaisySP/Source/Filters/svf.cpp"
         "DaisySP/Source/Filters/soap.cpp"
         "DaisySP/Source/Noise/clockednoise.cpp"
         "DaisySP/Source/Noise/grainlet.cpp"
         "DaisySP/Source/Noise/particle.cpp"
         "DaisySP/Source/PhysicalModeling/drip.cpp"
         "DaisySP/Source/PhysicalModeling/modalvoice.cpp"
         "DaisySP/Source/PhysicalModeling/resonator.cpp"
         "DaisySP/Source/PhysicalModeling/KarplusString.cpp"
         "DaisySP/Source/PhysicalModeling/stringvoice.cpp"
         "DaisySP/Source/Sampling/granularplayer.cpp"
         "DaisySP/Source/Synthesis/fm2.cpp"
         "DaisySP/Source/Synthesis/formantosc.cpp"
         "DaisySP/Source/Synthesis/oscillator.cpp"
         "DaisySP/Source/Synthesis/oscillatorbank.cpp"
         "DaisySP/Source/Synthesis/variablesawosc.cpp"
         "DaisySP/Source/Synthesis/variableshapeosc.cpp"
         "DaisySP/Source/Synthesis/vosim.cpp"
         "DaisySP/Source/Synthesis/zoscillator.cpp"
         "DaisySP/Source/Utility/dcblock.cpp"
         "DaisySP/Source/Utility/metro.cpp"
    INCLUDE_DIRS "." "DaisySP" "DaisySP/Source" "DaisySP/Source/Synthesis" "DaisySP/Source/Control" "DaisySP/Source/Drums" "DaisySP/Source/Dynamics" "DaisySP/Source/Effects" "DaisySP/Source/Filters" "DaisySP/Source/Noise" "DaisySP/Source/PhysicalModeling" "DaisySP/Source/Sampling" "DaisySP/Source/Utility"
)
